[package]
name = "rugl"
version = "0.1.0"
authors = ["Thomspoon <saturisk@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
js-sys = "0.3.10"
wasm-bindgen = "^0.2"

[dependencies.web-sys]
version = "0.3.10"
features = [
    "console",
    "Document",
    "Element",
    "Window",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlRenderingContext",
    "WebGlUniformLocation",
    "WebGpuShaderStage",
    "HtmlCanvasElement"
]